test/libsolidity/syntaxTests/denominations/deprecated_year.sol
contract C {
	uint constant a = 3 years;
}
// ----
// TypeError 4820: (32-39): Using "years" as a unit denomination is deprecated.
